Set initial path for Windows multi-file open.

The initial path is set for SelectFileDialogImpl::RunOpenMultiFileDialog.

Bug: 831097
Change-Id: I0de503f148efc8cda2677c907e78b8da6ce09101
Reviewed-on: https://chromium-review.googlesource.com/1005079
Commit-Queue: Ramin Halavati <rhalavati@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549806}